@@ -49,6 +49,9 @@ PreferencePage_IgnoreFieldFilterToolTip=Fields matching this expression, will be
 PreferencePage_IgnoreAnnotationsFilter=Code with &Annotations
 PreferencePage_IgnoreAnnotationsFilterToolTip=Code marked with these annotations (without '@'), will be ignored during detection (full class name recommended)
 
+PreferencePage_FilterClassWithMainMethod=Classes with a main method
+PreferencePage_FilterClassWithMainMethodToolTip=Classes with a main method will have no "unused class" markers
+
 PreferencePage_IgnoreImplements=Classes implementing/extending
 PreferencePage_IgnoreImplementsToolTip=Ignore classes implementing/extending this classes or interfaces (full class name recommended)
 
